# Rekh

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Shader.cpp  Shader.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  config.h.in  glad.c  main.cc  program.cpp  program.h
include/glad/: glad.h
shaders/: frag_shader.glsl  vert_shader.glsl
